--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
     "check-prop-types": "^1.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -42,6 +43,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jest-enzyme": "^7.1.2",
+    "moxios": "^0.4.0",
     "redux-logger": "^3.0.6"
   }
 }
